--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 		</label>
 		<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
 		<ul>
-			<li><a href="#">Item 1</a></li>
-			<li><a href="#">Item 2</a></li>
-			<li><a href="#">Item 3</a></li>
-			<li><a href="#">Item 4</a></li>
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">About Us</a></li>
+			<li><a href="#">Our Products</a></li>
+			<li><a href="#">Contact Us</a></li>
 		</ul>
 	</nav>
 
@@ -95,7 +95,7 @@
 	window.onresize = function() {
 		if(document.getElementById('check').checked)
 		{
-			if(screen.width<=560)
+			if(screen.width<=740)
 			{
 				document.getElementById('notnav').classList.remove('nodisplay');
 			}
