--- a/index.html
+++ b/index.html
@@ -54,19 +54,23 @@
 </head>
 <body>
 
-	<nav class="sticky-top">
-		<input type="checkbox" id="check" onchange="black();">
-		<label for="check">
-			<i class="fas fa-bars" id="bars"></i>
-		</label>
-		<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
-		<ul>
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Our Products</a></li>
-			<li><a href="#">Contact Us</a></li>
-		</ul>
-	</nav>
+	<div class="banner">
+
+		<nav class="sticky-top">
+			<input type="checkbox" id="check" onchange="black();">
+			<label for="check">
+				<i class="fas fa-bars" id="bars"></i>
+			</label>
+			<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
+			<ul>
+				<li class="active"><a href="#"><i class="fas fa-home"></i> Home</a></li>
+				<li><a href="#"><i class="fas fa-file-contract"></i> About Us</a></li>
+				<li><a href="#"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a href="#"><i class="far fa-address-card"></i> Contact Us</a></li>
+			</ul>
+		</nav>
+
+	</div>
 
 
 <div id="notnav" class="nodisplay"></div>
