--- a/index.html
+++ b/index.html
@@ -69,11 +69,17 @@
 				<li><a href="#"><i class="far fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
+		<br>
+		<div class="text-center container">
+			<h1 class="banner-name"><b>PRERANA ENTERPRISES</b></h1>
+		</div>
 
 	</div>
 
 
 <div id="notnav" class="nodisplay"></div>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores molestias velit praesentium assumenda aperiam, repellat. Odit consequatur officiis alias provident? Magni accusamus aperiam autem, voluptates impedit facilis quibusdam molestias minus.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores molestias velit praesentium assumenda aperiam, repellat. Odit consequatur officiis alias provident? Magni accusamus aperiam autem, voluptates impedit facilis quibusdam molestias minus.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores molestias velit praesentium assumenda aperiam, repellat. Odit consequatur officiis alias provident? Magni accusamus aperiam autem, voluptates impedit facilis quibusdam molestias minus.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores molestias velit praesentium assumenda aperiam, repellat. Odit consequatur officiis alias provident? Magni accusamus aperiam autem, voluptates impedit facilis quibusdam molestias minus.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores molestias velit praesentium assumenda aperiam, repellat. Odit consequatur officiis alias provident? Magni accusamus aperiam autem, voluptates impedit facilis quibusdam molestias minus.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores molestias velit praesentium assumenda aperiam, repellat. Odit consequatur officiis alias provident? Magni accusamus aperiam autem, voluptates impedit facilis quibusdam molestias minus.</p>
 
 
 
