--- a/index.html
+++ b/index.html
@@ -142,11 +142,64 @@
 		</div>
 
 	</div>
-	<div class="container text-right mt-md-5 mt-4"><p class="text-left home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="#" class="btn btn-primary review-btn">Read Reviews</a></div>
+	<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="#" class="btn btn-primary review-btn">Read Reviews</a></div>
 
 </div>
 
+<h2 class="text-center subname pt-3 pb-md-4 pb-4">Our Primary Goals</h2>
+<div class="container home-goal pb-4 text-success">
+	<div class="row">
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-thumbs-up"></i></div>
+				<div class="col-10 text-justify pb-2">Provide high-quality, reliable corrugated boxes.</div>
+			</div>
+		</div>
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-rupee-sign"></i></div>
+				<div class="col-10 text-justify pb-2">Provide affordable solutions to clients.</div>
+			</div>
+		</div>
 
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-handshake"></i></div>
+				<div class="col-10 text-justify pb-2">Create and cultivate long-term relationship with clients.</div>
+			</div>
+		</div>
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="fab fa-staylinked"></i></div>
+				<div class="col-10 text-justify pb-2">Respond immediately to the changing needs of our clients.</div>
+			</div>
+		</div>
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-smile"></i></div>
+				<div class="col-10 text-justify pb-2">Achieve complete customer satisfaction.</div>
+			</div>
+		</div>
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-chart-line"></i></div>
+				<div class="col-10 text-justify pb-2">Improve our services continuously.</div>
+			</div>
+		</div>
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-comments"></i></div>
+				<div class="col-10 text-justify">Encourage communication to achieve the highest standard of performance.</div>
+			</div>
+		</div>
+		<div class="col-lg-6 col-12">
+			<div class="row">
+				<div class="col-1 text-right mx-0 px-0"><i class="far fa-question-circle"></i></div>
+				<div class="col-10 text-justify">Resolve all queries of customers.</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 <h2 class="text-center subname pt-3 pb-md-5 pb-4">More About Us</h2>
@@ -160,11 +213,15 @@
 		  <img src='http://placekitten.com/300/200?image=4' class="stack-pics">
 		  <img src='http://placekitten.com/300/200?image=5' class="stack-pics">
 		</div>
-	</div><div class="col-md-7 col-12">
-
+	</div>
+	<div class="col-md-7 col-12">
+		<div class="home-profile-info text-justify mr-md-4 ml-md-0 mx-3 pt-md-0 pt-2">
+			<p>Prerana Enterprises is an extremely innovative company that is always open to fresh ideas. We are always looking at new ways to improve our operations and the process.</p><p class="mb-2">We understand the challenges faced by our clients and assist them in developing the ideas that would work efficiently for their unique needs and would fit in with their budget.</p>
+			<div class="mr-sm-5 text-right mt-0"><a href="#" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
+		</div>
 	</div>
 </div>
-hi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga sequi esse, officiis vel consequuntur, aspernatur, similique ea aut, sit modi nemo? Dolor voluptatum aliquam quae, eum eligendi totam recusandae quis!
+
 
 <script type="text/javascript">
 	
