--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			</div>
 
 
-			<div class="col-lg-4 col-sm-6 col-12 mb-sm-0 mb-4">
+			<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
 				<div class="ml-sm-3 ml-5 mb-3"><b>Reach Out To Us</b></div>
 				<div class="row">
 					<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></i></div>
@@ -291,7 +291,7 @@
 			</div>
 
 
-			<div class="col-lg-4 col-12 d-lg-block d-sm-none d-block mt-1" id="footer-3">
+			<div class="col-lg-4 col-12 d-lg-block d-sm-none d-block pt-sm-0 py-2" id="footer-3">
 				<div class="w-75 mx-auto" id="footer-image-div">
 					<img src="images/logo.png" class="position-absolute" id="footer-image" alt="Prerana Enterprises" onload="dyheight();">
 				</div>
